--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devDependencies": {
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "axios": "^1.6.0"
     },
     "dependencies": {
         "sweetalert2": "^11.10.6"
